--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,4 +1,8 @@
 - name: Home
   link: /
 - name: Blog
-  link: /blog.html
+  link: /blog
+- name: Blender
+  link: /blender
+- name: Engineer
+  link: /senior engineer
